--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springframework.version>4.3.5.RELEASE</springframework.version>
 		<spring.security.version>4.2.1.RELEASE</spring.security.version>
-		<version.tiles>2.3.31</version.tiles>
+		<version.tiles>2.5.5</version.tiles>
 	</properties>
 
 	<dependencies>
@@ -107,38 +107,26 @@
 			</exclusions>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.apache.struts.xwork</groupId>
-			<artifactId>xwork-core</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>asm</groupId>
-					<artifactId>asm</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>asm</groupId>
-					<artifactId>asm-commons</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.apache.struts.xwork</groupId> <artifactId>xwork-core</artifactId> 
+			<exclusions> <exclusion> <groupId>asm</groupId> <artifactId>asm</artifactId> 
+			</exclusion> <exclusion> <groupId>asm</groupId> <artifactId>asm-commons</artifactId> 
+			</exclusion> </exclusions> </dependency> -->
 
 
 
 		<!-- Struts 2 spring plugin -->
-		<!-- <dependency>
-			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-spring-plugin</artifactId>
-			<version>2.5.5</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.apache.struts</groupId> <artifactId>struts2-spring-plugin</artifactId> 
+			<version>2.5.5</version> </dependency> -->
 
-		<!-- <dependency>
+		<!-- <dependency> <groupId>org.apache.struts</groupId> <artifactId>struts2-tiles3-plugin</artifactId> 
+			<version>${version.tiles}</version> <scope>compile</scope> </dependency> 
+			<dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
+			<version>1.5.6</version> </dependency> -->
+		<dependency>
 			<groupId>org.apache.struts</groupId>
-			<artifactId>struts2-tiles3-plugin</artifactId>
+			<artifactId>struts2-tiles-plugin</artifactId>
 			<version>${version.tiles}</version>
-			<scope>compile</scope>
-		</dependency> -->
-
-
+		</dependency>
 	</dependencies>
 
 	<build>
