--- a/src/main/resources/simple/base/package.properties
+++ b/src/main/resources/simple/base/package.properties
@@ -3,4 +3,13 @@ requiredstring=  ${getText(fieldName)} is required.
 password = Password
 username = User Name
 Missing.message =  This feature is under construction. Please try again in the next iteration.
-productId= Password
+
+#define product
+productId= Product Id
+productName = Product Name
+quantity = Quantity
+price = Price
+#define error msg
+product.requiredstring=  ${getText(fieldName)} is required.
+
+
